--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "@vue/compiler-sfc": "^3.5.13",
     "@vue/eslint-config-prettier": "^10.1.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
@@ -28,7 +29,9 @@
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.16",
+    "typescript": "^5.8.2",
     "vite": "^6.0.3",
-    "vite-plugin-vue-devtools": "^7.6.5"
+    "vite-plugin-vue-devtools": "^7.6.5",
+    "vue-tsc": "^2.2.8"
   }
 }
